tests/NormalTests/paczka1/fuzzy1/57501547.err
Error in line 7: eJ'pdO5WXsQ S547 233,5
Error in line 8: 3fbJ2EPJe A67 19,77
Error in line 5: A587 A587 74,9
Error in line 4: eJgpdO5WXsQ S547 97,3
Error in line 20: 4epbafc S547 38,8
Error in line 17: A587 S132 50,0
Error in line 22: 4epbafc A67 39,2
Error in line 29: 4epbafc S547 16,0
Error in line 24: A587 A587 71,4
Error in line 27: eJgpdO5WXsQ S132 19,2
Error in line 32: 6CXht S132 20,9
